Fix alignment issues

--- a/Assets/css/todos.css
+++ b/Assets/css/todos.css
@@ -23,19 +23,16 @@ input:focus {
 }
 
 .delete {
-  display: inline-flex;
   opacity: 0%;
+}
+
+.taskContainer:hover {
+  font-weight: 500;
 }
 
 .taskContainer:hover .delete {
   opacity: 100%;
   transition: opacity .25s;
-}
-
-.task {
-    display: inline-flex;
-    margin-left: 20px;
-    text-decoration: inherit;
 }
 
 .task--completed {
@@ -45,9 +42,8 @@ input:focus {
 
 .taskContainer {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: flex-start;
   border: 3px solid var(--color_dark);
   border-radius: 10px;
   padding: 10px;
